chore: Misc refactorings and dep updates.